--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Culculateur d'argent</title>
+    <title>Calculateur d'argent</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./assets/DollarFront.jpg" type="image/x-icon">
 </head>
 <body>
 
