--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculateur d'argent</title>
+    <title>Culculateur d'argent</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./assets/DollarFront.jpg" type="image/x-icon">
 </head>
 <body>
+
+    <div>
+        <h1>Piece Counter</h1>
+    </div>
 
     <div id="Resultebox"><h2 id="Resulte" style="text-align: center;">Votre nombre de pièce est :</h2>
                          <h3 id="nombre"></h3>
@@ -27,6 +31,10 @@
         <br>
         <button id="calculer">Calculer</button>
     </div>
+
+    <div>
+        <p>Ce site à été crée par <a href="https://youtube.com/@JustEnzoVideo">Justenzo</a> un ado de 15 ans qui débute dans la programmation en Javascript, HTML, CSS.</p>
+    </div>
     
     <div>
         <ul>
@@ -35,11 +43,6 @@
             <li><a href="https://github.com/JustEnzoGangsta">Github</a></li>
         </ul>
     </div>
-
-    <div>
-        <p>Ce site à été crée par <a href="https://youtube.com/@JustEnzoVideo">Justenzo</a> un ado de 15 ans qui débute dans la programmation en Javascript, HTML, CSS.</p>
-    </div>
-
 
 
 
