--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
     <div id="navbar">
         <ul>
+            <li><a href="#" id="Utilitaries">| Utilitaries |</a></li>
             <li><a href="./index.html">Accueil</a></li>
             <li><a href="./PieceCounter.html">Piece counter</a></li>
         </ul>
 
     </div>
 
-    <div><h1>Bienvenu sur Utilitaries</h1></div>
+    <div><h1>Bienvenue sur Utilitaries</h1></div>
 
     <div class="Texte"><p>Ici vous trouverez des outiles pour vous aider dans la vie de tout les jours comme un compteur de Pieces.<br>Vous pouvez retrouver mes infos personnels en bas de page.</p></div>
     
