--- a/PieceCounter.html
+++ b/PieceCounter.html
@@ -11,6 +11,7 @@
 
     <div id="navbar">
         <ul>
+            <li><a href="#" id="Utilitaries">| Utilitaries |</a></li>
             <li><a href="./index.html">Accueil</a></li>
             <li><a href="./PieceCounter.html">Piece counter</a></li>
         </ul>
@@ -38,6 +39,7 @@
         <button id="btn5" class="button">+10</button>
         <br>
         <button id="calculer">Calculer</button>
+        <button id="LastNum" class="button"><-</button>
     </div>
 
     <div>
